tests/ecc-aws-121-restrict_outbound_traffic/placebo-red/ec2.DescribeSecurityGroups_1.json
{
    "status_code": 200,
    "data": {
        "SecurityGroups": [
            {
                "GroupId": "sg-01b93f043dd242c6a",
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1",
                        "UserIdGroupPairs": [
                            {
                                "UserId": "644160558196",
                                "GroupId": "sg-01b93f043dd242c6a"
                            }
                        ],
                        "IpRanges": [],
                        "Ipv6Ranges": [
                            {
                                "CidrIpv6": "::/0"
                            }
                        ],
                        "PrefixListIds": []
                    }
                ],
                "Tags": [
                    {
                        "Key": "ComplianceStatus",
                        "Value": "Red"
                    },
                    {
                        "Key": "CustodianRule",
                        "Value": "ecc-aws-121-restrict_outbound_traffic"
                    },
                    {
                        "Key": "Name",
                        "Value": "121_security_group_red2"
                    }
                ],
                "VpcId": "vpc-000",
                "OwnerId": "644160558196",
                "GroupName": "121_security_group_red2",
                "Description": "Managed by Terraform",
                "IpPermissions": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 80,
                        "ToPort": 80,
                        "UserIdGroupPairs": [],
                        "IpRanges": [
                            {
                                "Description": "HTTP from VPC",
                                "CidrIp": "172.31.0.0/16"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": []
                    }
                ]
            }
        ],
        "ResponseMetadata": {}
    }
}
